--- a/sass/_adventures.scss
+++ b/sass/_adventures.scss
@@ -66,6 +66,8 @@ header {
 }
 
 body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon,
+body.node-type-news-stefflhof-sulmsee.section-triahtlon,
+body.section-triathlon,
 body.section-sulmsee-triathlon {
   header {
   @extend %adv-gradient-sulmsee;
