Change logo on frontpage and triathlon landing page

--- a/sass/_adventures.scss
+++ b/sass/_adventures.scss
@@ -885,24 +885,26 @@ padding-left: 0.5em;
   }
   h2 {
     @include hide-text;
-    background: {
-      image: image-url('PlankseeTriathlonLogo_weiss.png');
-      //image: image-url('teaser-logo-front-sulmsee-tri.png');
-      //image: image-url('stefflhof_weiss.svg');
-      repeat: no-repeat;
-      position: 0 6px;
-      width: 100%;
-      height: auto;
-      }
+    background-image: image-url('PlankseeTriathlonLogo_weiss.png');
+    background-repeat: no-repeat;
+    background-position: 0 6px;
+    background-size: 100% auto;
+    // background: {
+    //   image: image-url('PlankseeTriathlonLogo_weiss.png');
+    // }
+    //   //image: image-url('teaser-logo-front-sulmsee-tri.png');
+    //   //image: image-url('stefflhof_weiss.svg');
+    //   repeat: no-repeat;
+    //   position: 0 6px;
+    //   width: 100%;
+    //   height: auto;
+    //   }
     width: 356px;
-    height: 74px;
+    height: 94px;
 
     @include MQ(XL) {
-      background: {
-      image: image-url('teaser-logo-front-sulmsee-tri-mq-xl.png');
-      }
-      width: 280px;
-      height: 58px;
+      background-image: image-url('PlankseeTriathlonLogo_weiss.png');
+      background-size: 85% auto;
     }
 
   }
@@ -1386,6 +1388,34 @@ padding-left: 0.5em;
 // ============================================
 // SULMSEE TRIATHLON LANDING PAGE
 // ============================================
+
+// hide title on informationen
+
+.page-triathlon-informationen .column > h1 {
+  @include hide-text;
+}
+
+// New Logo 2016
+
+.not-front .pane-1 {
+    @extend %adv-gradient-sulmsee;
+    padding: 16px 0;
+    margin-right: 18px;
+  > h2 {
+    @include hide-text;
+    margin: 0 auto;
+    background-image: image-url('PlankseeTriathlonLogo_weiss.png') !important;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% auto;
+    width: 356px;
+    height: 94px;
+
+  }
+  > p {
+    @include hide-text;
+  }
+}
 
 // CONTENT AREA box-shadow
 
