--- a/sass/_adventures.scss
+++ b/sass/_adventures.scss
@@ -1401,6 +1401,11 @@ padding-left: 0.5em;
     @extend %adv-gradient-sulmsee;
     padding: 16px 0;
     margin-right: 18px;
+
+    @include MQ(M) {
+      margin-right: 6px !important;
+    }
+
   > h2 {
     @include hide-text;
     margin: 0 auto;
@@ -1410,8 +1415,8 @@ padding-left: 0.5em;
     background-size: 100% auto;
     width: 356px;
     height: 94px;
-
   }
+
   > p {
     @include hide-text;
   }
